fixing blue highlight on mobile interactions

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -133,3 +133,11 @@ html {
   font-family: Josefin Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
